# AI_Embedder

./: .gitattributes  .gitignore  CMakeLists.txt  LLamaCppTest1.sln  README.md
data/: sample.txt  sample2.txt  sample_pdf.txt
include/: chunker.h  embedder.h  llm.h  vector_store.h
src/: CMakeLists.txt  main.cpp
src/chunker/: SimpleChunker.h  SmartChunker.cpp  SmartChunker.h
src/embedder/: OnnxEmbedder.h  Tokenizer.h
src/llm/: LocalLLM.h
src/utils/: Pipeline.h
src/vector_store/: SimpleVectorStore.h
